hphp/hack/test/typecheck/srecko2.php.exp
File "srecko2.php", line 20, characters 10-13:
Invalid return type (Typing[4110])
File "srecko2.php", line 15, characters 23-25:
Expected Foo
File "srecko2.php", line 16, characters 15-27:
But got SomeInterface
